# nuball

./: CMakeLists.txt  README  gun.mac  mynuball.cc
analysis/: BiasingCo60.cc  CMakeLists.txt  GetAngles.hh  reconstruction.cc
include/: LICORNE_Chamber.hh  NuballActionInitialization.hh  NuballAnalysis.hh  NuballClover.hh  NuballCloverBGO.hh  NuballCloverHit.hh  NuballCloverSD.hh  NuballDetectorConstruction.hh  NuballEventAction.hh  NuballLaBr3.hh  NuballLaBr3Hit.hh  NuballLaBr3SD.hh  NuballLaBr3Valencia.hh  NuballPhaseI.hh  NuballPhaseIBGO.hh  NuballPhaseIHit.hh  NuballPhaseISD.hh  NuballPrimaryGeneratorAction.hh  NuballRunAction.hh  NuballThTarget.hh  NuballUTarget.hh  OUPS_Chamber.hh  matrix.hh
src/: LICORNE_chamber.cc  NuballActionInitialization.cc  NuballClover.cc  NuballCloverBGO.cc  NuballCloverHit.cc  NuballCloverSD.cc  NuballDetectorConstruction.cc  NuballEventAction.cc  NuballLaBr3.cc  NuballLaBr3Hit.cc  NuballLaBr3SD.cc  NuballLaBr3Valencia.cc  NuballPhaseI.cc  NuballPhaseIBGO.cc  NuballPhaseIHit.cc  NuballPhaseISD.cc  NuballPrimaryGeneratorAction.cc  NuballRunAction.cc  NuballThTarget.cc  NuballUTarget.cc  OUPS_chamber.cc
